--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,26 +2,15 @@
   #inicio img {
     width: 45% !important; }
   #inicio h1 {
-    font-size: 2.4rem !important; }
+    font-size: 2.3rem !important; }
   #inicio h2 {
-    font-size: 1.5em !important; }
+    font-size: 1.3em !important; }
   #AboutUS h2 {
     font-size: 1.6rem !important; }
   #AboutUS h3 {
     font-size: 1rem !important; }
   .Titulos {
-    font-size: 2.25rem !important; } 
-  .TextoLotes{
-    font-size: 1.1rem;}
-    #Loteos {
-      width: 96%;
-      display: flex;
-      flex-flow: row wrap;
-      justify-content: space-around; }
-      #Loteos div {
-        margin: 15px 0 15px 0;
-        width: 100% !important; }
-    }
+    font-size: 2.25rem !important; } }
 
 @media (max-width: 1300px) {
   #Contacto {
@@ -137,13 +126,14 @@ nav {
 
 #inicio {
   background-image: url(/images/wallpaper2.jpg);
-  background-size:cover;
+  background-size: cover;
   background-position: center;
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
   height: 100vh;
+  border-radius: 10px;
   flex-direction: column; }
   #inicio img {
     margin: 3px;
@@ -155,7 +145,7 @@ nav {
     width: 100%;
     height: 30%;
     text-align: center;
-    border-radius: 10px; }
+    border-radius: 16px; }
     #inicio div h1 {
       color: red;
       font-family: "Acme" sans-serif;
@@ -168,13 +158,13 @@ nav {
       margin-top: 30px; }
 
 #Loteos {
-  width: 96%;
+  width: 100%;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around; }
   #Loteos div {
     margin: 15px 0 15px 0;
-    width: 45%; }
+    width: 40%; }
 
 .TextoLotes {
   margin-left: 5px;
@@ -194,9 +184,10 @@ nav {
   width: 97.3%;
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around; }
+  justify-content: space-around;
+  background-color: rgba(233, 233, 233, 0.199); }
   #Contacto iframe {
-    width: 95% !important; }
+    width: 95%; }
   #Contacto .direccion {
     font-family: 'Fraunces',serif;
     font-size: 100;
@@ -241,3 +232,77 @@ h5 {
 #sitio {
   display: block;
   align-items: center !important; }
+
+footer {
+  width: 100%;
+  background: #202020;
+  color: white; }
+
+.container-footer-all {
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+  padding: 30px; }
+  .container-footer-all a {
+    text-decoration: none;
+    color: #c7c7c7; }
+
+.container-body {
+  display: flex;
+  justify-content: space-between; }
+
+.column1 {
+  max-width: 400px; }
+  .column1 h1 {
+    font-size: 22px; }
+  .column1 label {
+    color: #c7c7c7; }
+
+.column2 h1 {
+  font-size: 22px; }
+
+.column2 .row {
+  margin-top: 20px;
+  display: flex;
+  margin-left: 0px; }
+  .column2 .row img {
+    width: 36px;
+    height: 36px; }
+  .column2 .row label {
+    margin-top: 10px;
+    margin-left: 20px;
+    color: #c7c7c7; }
+
+.column3 {
+  max-width: 400px; }
+  .column3 h1 {
+    font-size: 22px; }
+  .column3 ul li {
+    margin-top: 10px; }
+
+.row2 {
+  display: flex;
+  margin-top: 20px; }
+  .row2 img {
+    width: 36px;
+    height: 36px; }
+  .row2 label {
+    margin-top: 10px;
+    margin-left: 20px;
+    max-width: 160px; }
+
+.container-footer {
+  width: 100%;
+  background: #101010a1;
+  font-size: large;
+  padding: 5px; }
+  .container-footer .copyright {
+    color: #c7c7c7; }
+
+@media screen and (max-width: 1100px) {
+  .container-body {
+    flex-wrap: wrap; }
+  .column2, .column3 {
+    margin-top: 40px; }
+  .column1 label, .column2 label {
+    font-size: small; } }
