--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -153,14 +153,14 @@ nav {
 }   
 //--------------------------inicio------------------------------------------// 
 #inicio { 
-    background-image: url(/images/broker-giving-keys.jpg);//imagen a cambiar a futuro 
+    background-image: url(/images/wallpaper2.jpg);//imagen a cambiar a futuro 
     background-size: cover;
-    background-attachment: fixed;
+    background-position: center;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 83%;
-    height: 80vh;
+    width: 100%;
+    height: 100vh;
     border-radius: 10px;        
     flex-direction: column;
     img{
@@ -283,7 +283,102 @@ h5{
     font-size: 2rem;
 }
 //-------------------------acerca de nosotros-------------------------------// 
-#sitio{
-    display: block;
-    align-items: center !important;
+
+//-----------------------------footer---------------------------------------//
+footer{
+    width: 100%;
+    background: #202020;
+    color: white;
 }
+.container-footer-all{
+        width: 100%;
+        max-width: 1200px;
+        margin: auto;
+        padding:30px;
+        a{
+            text-decoration: none;
+            color: #c7c7c7;
+        }
+    }
+.container-body{
+    display: flex;
+    justify-content: space-between;
+}
+.column1{
+    max-width: 400px;
+    
+    h1{
+        font-size: 22px;
+    }
+    label{
+        color:#c7c7c7;
+        
+    }
+}
+.column2 {
+    h1{
+        font-size: 22px;
+    }
+    .row{
+        margin-top: 20px;
+        display: flex;
+        margin-left: 0px;
+        img{
+            width: 36px;
+            height: 36px;
+        }
+        label{
+            margin-top: 10px;
+            margin-left: 20px;
+            color: #c7c7c7;
+        }
+    }
+}
+.column3{
+    max-width: 400px;
+    h1{
+        font-size: 22px;
+    }
+    ul{
+        li{
+            margin-top: 10px;
+        }
+    }
+}
+.row2{
+    display: flex;
+    margin-top: 20px;
+    img{
+        width: 36px;
+        height: 36px;
+    }
+    label{
+        margin-top: 10px;
+        margin-left: 20px;
+        max-width: 160px;
+    }
+}
+.container-footer{
+    width: 100%;
+    background: #101010a1;
+    font-size: large;
+    padding:5px;
+    .copyright{
+        color:#c7c7c7;
+    }
+}
+
+@media screen and (max-width:1100px){
+    .container-body{
+        flex-wrap: wrap;
+    } 
+    .column2,.column3{
+        margin-top: 40px;
+    }
+    .column1,.column2{
+        label {
+            font-size: small;
+        }
+    }
+}
+//-----------------------------footer---------------------------------------//
